--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,11 +24,13 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # مرحله ۳: راه‌اندازی فلاتر
+      # مرحله ۳: راه‌اندازی فلاتر (مهم: این نسخه را با نسخه محلی خود هماهنگ کنید)
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.2' # می‌توانید از آخرین نسخه پایدار فلاتر استفاده کنید
+          # دستور 'flutter --version' را در کامپیوتر خود اجرا کرده
+          # و خروجی آن را در اینجا جایگزین کنید. برای مثال: '3.22.2'
+          flutter-version: 'YOUR_FLUTTER_VERSION' 
           channel: 'stable'
           cache: true
 
