--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  # این خط برای پشتیبانی از زبان فارسی لازم است
   flutter_localizations:
     sdk: flutter
-
+  
   # State Management
   flutter_riverpod: ^2.5.1
 
@@ -28,24 +26,28 @@ dependencies:
   # Models & Equality
   equatable: ^2.0.5
 
-  # تاریخ شمسی
+  # Date formatting
   shamsi_date: ^1.0.1
-
-  # بومی سازی تاریخ (وابسته به flutter_localizations)
-  # نسخه با فلاتر شما هماهنگ شده است
-  intl: ^0.20.2
-
+  intl: ^0.19.0 # هماهنگ شده با نسخه فلاتر
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^2.0.0
   
-  # Code Generation
+  flutter_lints: ^2.0.0
   build_runner: ^2.4.8
   isar_generator: ^3.1.0+1
 
+# بازنویسی وابستگی برای حل مشکل Namespace در اندروید
+dependency_overrides:
+  isar_flutter_libs: 3.1.0+1
+
 flutter:
   uses-material-design: true
+
+
+
+# بازنویسی وابستگی برای حل مشکل Namespace در اندروید
+dependency_overrides:
+  isar_flutter_libs: 3.1.0+1
 
