--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,39 +1,30 @@
 name: my_planner_pro
-description: "یک اپلیکیشن حرفه‌ای برای مدیریت فعالیت‌های روزانه."
-publish_to: 'none' 
+description: A new Flutter project.
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=3.0.0-417.0.dev <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  
-  flutter_riverpod: ^2.5.1
-
   isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
-  path_provider: ^2.1.2
-
-  go_router: ^13.2.0
-
-  equatable: ^2.0.5
-
+  # The following line was removed as it's now included automatically by the isar package.
+  # isar_flutter_libs: ^3.1.0+1 
+  path_provider: ^2.0.12
+  get: ^4.6.5
+  persian_datetime_picker: ^2.6.0
   shamsi_date: ^1.0.1
-  intl: ^0.20.2
-  cupertino_icons: ^1.0.8
+  flutter_localization: ^0.2.0
+  intl: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
-  flutter_lints: ^2.0.0
-  build_runner: ^2.4.8
   isar_generator: ^3.1.0+1
+  build_runner: ^2.3.3
+  flutter_lints: ^3.0.2
 
 flutter:
   uses-material-design: true
-
