--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  # Added missing packages that were causing build errors.
+  flutter_riverpod: ^2.5.1
+  go_router: ^14.1.1
+  equatable: ^2.0.5
+
   isar: ^3.1.0+1
-  # The following line was removed as it's now included automatically by the isar package.
-  # isar_flutter_libs: ^3.1.0+1 
   path_provider: ^2.0.12
   get: ^4.6.5
   persian_datetime_picker: ^2.6.0
@@ -28,3 +32,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
