--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,34 +1,46 @@
 name: my_planner_pro
-description: A new Flutter project.
+description: "یک اپلیکیشن حرفه‌ای برای مدیریت فعالیت‌های روزانه."
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0-417.0.dev <4.0.0'
+  sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   
-  # Added missing packages that were causing build errors.
+  # برای رفع هشدار فونت در زمان ساخت
+  cupertino_icons: ^1.0.2
+
+  # State Management (فقط Riverpod نگه داشته شد)
   flutter_riverpod: ^2.5.1
-  go_router: ^14.1.1
+
+  # Local Database
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.2
+
+  # Routing
+  go_router: ^13.2.0
+
+  # Models & Equality
   equatable: ^2.0.5
 
-  isar: ^3.1.0+1
-  path_provider: ^2.0.12
-  get: ^4.6.5
-  persian_datetime_picker: ^2.6.0
+  # Date formatting
   shamsi_date: ^1.0.1
-  flutter_localization: ^0.2.0
-  intl: any
+  # پین کردن نسخه برای جلوگیری از تداخل
+  intl: 0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  isar_generator: ^3.1.0+1
-  build_runner: ^2.3.3
+  
   flutter_lints: ^3.0.2
+  build_runner: ^2.4.8
+  isar_generator: ^3.1.0+1
 
 flutter:
   uses-material-design: true
